--- a/css/api/covid.css
+++ b/css/api/covid.css
@@ -12,7 +12,6 @@
 #search-field {
   justify-content: center;
   display: flex;
-  animation: 2s scroll-up-search-field;
 }
 
 #search-btn,
@@ -48,7 +47,7 @@
 }
 
 #country-data-items {
-  box-shadow: 1px 1px 5px rgba(32, 32, 32, 0.87);
+  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
   animation: 1.5s scroll-up-country-data;
   padding: 30px 40% 30px 40%;
   display: none;
@@ -62,7 +61,7 @@
 #no-results-found {
   display: none;
   text-align: center;
-  color: rgb(7, 187, 61);
+  color: maroon;
 }
 
 #country-data-items-wrapper {
@@ -75,11 +74,41 @@
   height: fit-content;
 }
 
+/* html, body {
+  width: 100%;
+  height:100%;
+}
+
+body {
+    background: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5, #23d5ab);
+    background-size: 400% 400%;
+    animation: gradient 15s ease infinite;
+}
+
+@keyframes gradient {
+    0% {
+        background-position: 0% 50%;
+    }
+    50% {
+        background-position: 100% 50%;
+    }
+    100% {
+        background-position: 0% 50%;
+    }
+} */
+
 main {
+  background: linear-gradient(
+    -45deg,
+    rgba(12, 206, 206, 0.85),
+    rgba(133, 10, 204, 0.85),
+    pink
+  );
+  background-size: 400% 400%;
+  animation: gradient 15s ease infinite;
   position: absolute;
   width: 100%;
   padding-top: 150px;
-  background-color: #343a40;
   height: 100%;
   z-index: -1;
 }
@@ -94,12 +123,14 @@ main {
   }
 }
 
-@keyframes scroll-up-search-field {
-  from {
-    margin-top: 100%;
+@keyframes gradient {
+  0% {
+    background-position: 0% 50%;
   }
-
-  to {
-    margin-top: 0px;
+  50% {
+    background-position: 100% 50%;
+  }
+  100% {
+    background-position: 0% 50%;
   }
 }
